# v-prism

./: .gitignore  README.md  env_cpu.yml  environment.yml  index.html  pyproject.toml
.github/workflows/: deploy.yml
docs/: README.md  astro.config.mjs  package-lock.json  package.json  project_structure.md
docs/src/layouts/: Layout.astro  MarkdownLayout.astro
docs/src/pages/: docs.md  index.astro
logs/: example_log.txt
notebooks/: changing_grid_length.ipynb  example_demo.ipynb  paper_figs.ipynb  primitive_scene_for_paper.ipynb  uncertainty_paper_fig.ipynb  visualize_neural_model.ipynb
scripts/: ablations.sh  ablations_1.sh  eval_pybullet_data.py  eval_sim_data.py  random_script.sh  train_neural_network.py
src/v_prism/: __init__.py  full_method.py  settings.py
src/v_prism/data_loading/: bullet_reconstruction_dataset.py  negative_sampling.py  scene.py  subsampling.py
src/v_prism/mapping/: bayesian_hilbert_map.py  hilbert_map.py  hinge_point_generation.py  mapper_protocol.py  v_prism.py
src/v_prism/utils/: constants.py  data_download.py  eval.py  kernels.py  pointsdf.py  ransac.py  subsample.py  ui.py  visualization.py
tests/: test_bayesian_hilbert_map.py  test_full_method.py  test_hinge_point_generation.py
